@@ -1,6 +1,8 @@
 2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: add an option to control the titlebar
-	text position, both in vertical and horizontal direction
+	text position, both in vertical and horizontal direction. Added an
+	ugly hack to ensure tab-adjustments are correct when switching between
+	tabbed themes from SawfishConfig.
 
 	* themes/StyleTab/theme.jl: set title-x offsets so that
 	update-text-position works properly with StyleTab
